--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -64,85 +64,116 @@
                 You can provide 1-3 starting times according to your
                 availability.
               </p>
-              <p class="description1">
-                Current time zone :
-                <span style="font-weight: 600">{{c.data.userTimeZone}}</span>
-              </p>
 
-              <!-- Duration Dropdown -->
-              <div class="duration-row" ng-if="!c.acceptTrigger">
-                <label class="short-question" for="duration"
-                  >Meeting Duration<span style="color: red">*</span></label
-                >
-                <select class="dropdown" ng-model="c.duration" required>
-                  <option value="15">15 minutes</option>
-                  <option value="30">30 minutes</option>
-                  <option value="45">45 minutes</option>
-                  <option value="60">60 minutes</option>
-                </select>
-              </div>              
-              
-              <div class="duration-row" ng-if="c.acceptTrigger">
-                <label class="short-question" for="duration"
-                  >Meeting Duration :</label
-                >
-                <label>
-                  {{c.meetingDuration}} minutes
-                </label>
-              </div>
-              <br/>
-              <!-- Cutt-off Time -->
-              <div class="cutOffTime">
-                <label
-                  class="label"
-                  style="
-                    color: black;
-                    font-size: 15px;
-                    font-weight: 500;
-                    margin: 0;
-                    padding: 0;
-                  "
-                  >Earliest Possible Start Time :
-                </label>
-                <span
-                  class="earliest-time"
-                  style="color: #ff7300; font-weight: bold; font-size: 15px"
-                  ng-show="!c.loading"
-                >
-                  {{c.data.localTime}}
-                </span>
-              </div>
-              <hr />
+              <table style="width: 100%; margin-top: 15px;">
+                <tbody>
+                  <!-- Current Time Zone Row -->
+                  <tr>
+                    <td style="padding: 10px; font-weight: 500; width: 40%;">
+                      <label class="description1">
+                        Current time zone :
+                      </label>
+                    </td>
+                    <td style="padding: 10px;">
+                      <span style="font-weight: 600">{{c.data.userTimeZone}}</span>
+                    </td>
+                  </tr>
 
-              <!-- Dynamic Date-Time Fields -->
-              <div
-                ng-repeat="startTime in c.startTimes track by $index"
-                class="times"
-              >
-                <label class="start-times"
-                  >Start Date and Time {{$index + 1}}</label
-                >
-                <div class="date-time-inputs">
-                  <!-- Assign unique id dynamically -->
-                  <input
-                    type="text"
-                    id="datetimepicker{{$index}}"
-                    placeholder="Select Date and Time"
-                    ng-model="startTime.time"
-                    required
-                  />
-                </div>
-              </div>
+                  <!-- Duration Dropdown Row -->
+                  <tr ng-if="!c.acceptTrigger">
+                    <td style="padding: 10px; font-weight: 500;">
+                      <label class="short-question" for="duration"
+                        >Meeting Duration<span style="color: red">*</span></label
+                      >
+                    </td>
+                    <td style="padding: 10px;">
+                      <select class="dropdown" ng-model="c.duration" required style="width: 100%;">
+                        <option value="15">15 minutes</option>
+                        <option value="30">30 minutes</option>
+                        <option value="45">45 minutes</option>
+                        <option value="60">60 minutes</option>
+                      </select>
+                    </td>
+                  </tr>
+                  
+                  <tr ng-if="c.acceptTrigger">
+                    <td style="padding: 10px; font-weight: 500;">
+                      <label class="short-question" for="duration"
+                        >Meeting Duration :</label
+                      >
+                    </td>
+                    <td style="padding: 10px;">
+                      <label>
+                        {{c.meetingDuration}} minutes
+                      </label>
+                    </td>
+                  </tr>
 
-              <!-- Add Button disabled until the last entry is valid -->
-              <button
-                type="button"
-                class="btn btn-secondary"
-                ng-click="c.addStartTime(c.startTimes.length)"
-                ng-show="c.startTimes.length < 3 && !c.isAddButtonDisabled()"
-              >
-                ADD +
-              </button>
+                  <!-- Earliest Possible Start Time Row -->
+                  <tr>
+                    <td style="padding: 10px; font-weight: 500;">
+                      <label
+                        class="label"
+                        style="
+                          color: black;
+                          font-size: 15px;
+                          font-weight: 500;
+                          margin: 0;
+                          padding: 0;
+                        "
+                        >Earliest Possible Start Time :
+                      </label>
+                    </td>
+                    <td style="padding: 10px;">
+                      <span
+                        class="earliest-time"
+                        style="color: #ff7300; font-weight: bold; font-size: 15px"
+                        ng-show="!c.loading"
+                      >
+                        {{c.data.localTime}}
+                      </span>
+                    </td>
+                  </tr>
+
+                  <!-- Dynamic Date-Time Fields Rows -->
+                  <tr
+                    ng-repeat="startTime in c.startTimes track by $index"
+                    class="times"
+                  >
+                    <td style="padding: 10px; font-weight: 500;">
+                      <label class="start-times"
+                        >Start Date and Time {{$index + 1}}</label
+                      >
+                    </td>
+                    <td style="padding: 10px;">
+                      <div class="date-time-inputs">
+                        <!-- Assign unique id dynamically -->
+                        <input
+                          type="text"
+                          id="datetimepicker{{$index}}"
+                          placeholder="Select Date and Time"
+                          ng-model="startTime.time"
+                          required
+                          style="width: 100%;"
+                        />
+                      </div>
+                    </td>
+                  </tr>
+
+                  <!-- Add Button Row -->
+                  <tr ng-show="c.startTimes.length < 3 && !c.isAddButtonDisabled()">
+                    <td colspan="2" style="padding: 10px; text-align: center;">
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        ng-click="c.addStartTime(c.startTimes.length)"
+                      >
+                        ADD +
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
 
             <!-- Buttons -->
