--- a/reqbuttonupd.html
+++ b/reqbuttonupd.html
@@ -5,32 +5,42 @@
 />
 
 <div style="position: relative">
-  <div style="z-index: 10">
-    <span
-      ng-click="c.openCallForms()"
-      title="Request Call"
-      style="
-        cursor: pointer;
-        position: relative;
-        display: inline-block;
-        color: #717171;
-        transition: opacity 0.2s ease;
-      "
-      onmouseover="this.style.opacity='0.7'"
-      onmouseout="this.style.opacity='1'"
-    >
-      <i class="fa fa-phone" style="font-size: 20px"></i>
-      <i
-        class="fa fa-plus"
+  <div ng-if="options.showPhoneIcon">
+    <div style="z-index: 10">
+      <span
+        ng-click="c.openCallForms()"
+        title="Request Call"
         style="
-          font-size: 12px;
-          position: absolute;
-          top: -2px;
-          right: -4px;
+          cursor: pointer;
+          position: relative;
+          display: inline-block;
           color: #717171;
+          transition: opacity 0.2s ease;
         "
-      ></i>
-    </span>
+        onmouseover="this.style.opacity='0.7'"
+        onmouseout="this.style.opacity='1'"
+      >
+        <i class="fa fa-phone" style="font-size: 20px"></i>
+        <i
+          class="fa fa-plus"
+          style="
+            font-size: 12px;
+            position: absolute;
+            top: -2px;
+            right: -4px;
+            color: #717171;
+          "
+        ></i>
+      </span>
+    </div>
+  </div>
+
+  <!-- Show button when condition is false -->
+  <div ng-if="!options.showPhoneIcon">
+    <!-- Request a Call Button -->
+    <button class="btn btn-primary btn-question" ng-click="c.openCallForms()">
+      Request a Call
+    </button>
   </div>
 
   <!-- Modal for the Call Request Form -->
@@ -197,7 +207,7 @@
               </div>
 
               <!-- Buttons -->
-              <div style="display:flex; justify-items:center; width:100%;">
+              <div style="display: flex; justify-items: center; width: 100%">
                 <button
                   type="button"
                   style="background-color: #ff7301"
